src/test/resources/scripts/language/parser/invalid/noKeywordID.sbsc
// Parser should fail when keyword is used as ID

num = 4;

return false;